fixed scroll effect on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -77,6 +77,9 @@
     margin-top: 70px;
 
     }
+    .parallax {
+        background-attachment: scroll;
+    }
 }
 
 @media screen and (min-width: 960px) {
